<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_light"
        tools:context=".MainActivity">

<!--        <data>

        </data>-->

        <TextView
            android:id="@+id/textViewOutOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/out_of_text"
            android:textColor="@color/primary_text"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primary_light_dark"
            android:elevation="30dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonTrue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOutOf">

            <TextView
                android:id="@+id/questionTextView"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/question_text_padding"
                android:text="@string/question_placeholder"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonTrue"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="50dp"
            android:text="@string/true_button"
            app:layout_constraintBottom_toTopOf="@+id/buttonFalse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonFalse"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="50dp"
            android:text="@string/false_button"
            app:layout_constraintBottom_toTopOf="@+id/buttonNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTrue"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonNext"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:elevation="50dp"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFalse"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/score_text"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/score"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewOutOf"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>